// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Box 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 iuijxl"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a background colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 jamsbG"
      color="white"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a responsive width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 cxGsXU"
      width="[object Object]"
    >
      Full width on extra small screens, 1/2 width on small and 1/4 width on medium
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a set width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 clejNr"
      width="0.5"
    >
      Half Width
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a shadow 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 bHmSeb"
    >
      Small shadow
    </div>
    <div
      class="Box-sc-1qu1edy-0 eyfCVZ"
    >
      Medium shadow
    </div>
    <div
      class="Box-sc-1qu1edy-0 bGaQQB"
    >
      Large shadow
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a text colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 dCMDFS"
      color="blue"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 iuijxl"
    >
      <div
        class="Box-sc-1qu1edy-0 bIpQPr"
      >
        Margin
      </div>
      <div
        class="Box-sc-1qu1edy-0 fNJCWd"
      >
        Margin top
      </div>
      <div
        class="Box-sc-1qu1edy-0 cfKJLu"
      >
        Margin right
      </div>
      <div
        class="Box-sc-1qu1edy-0 hSzfDt"
      >
        Margin bottom
      </div>
      <div
        class="Box-sc-1qu1edy-0 dTezRN"
      >
        Margin left
      </div>
      <div
        class="Box-sc-1qu1edy-0 cgLFQx"
      >
        Margin x
      </div>
      <div
        class="Box-sc-1qu1edy-0 iWmXdK"
      >
        Margin y
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With padding 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-sc-1qu1edy-0 kbDFVk"
    >
      <div
        class="Box-sc-1qu1edy-0 UfyFz"
      >
        Padding
      </div>
      <div
        class="Box-sc-1qu1edy-0 UfyFz"
      >
        Padding top
      </div>
      <div
        class="Box-sc-1qu1edy-0 dFirUG"
      >
        Padding right
      </div>
      <div
        class="Box-sc-1qu1edy-0 kjVnmN"
      >
        Padding bottom
      </div>
      <div
        class="Box-sc-1qu1edy-0 kYJNBN"
      >
        Padding left
      </div>
      <div
        class="Box-sc-1qu1edy-0 qFcSW"
      >
        Padding x
      </div>
      <div
        class="Box-sc-1qu1edy-0 iDOULB"
      >
        Padding y
      </div>
    </div>
  </div>
</div>
`;
